stats works